--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,7 @@
 @import url(../blocks/card/__caption/card__caption.css);
 @import url(../blocks/card/__mane-card/card__mane-card.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_avtine/card__like-button_active.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
@@ -45,7 +46,8 @@
 @import url(../blocks/popup/__input-box/popup__input-box.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 
-/* *{
+/*
+*{
   outline: 1px dashed orange;
 }
 */
