--- a/blocks/content/__section/content__section.css
+++ b/blocks/content/__section/content__section.css
@@ -1,7 +1,7 @@
 .content__section {
   max-width: 880px;
   margin: 0 auto;
-  padding: 0 19px
+  padding: 0 19px;
 }
 
 @media screen and (max-width: 568px) {
