--- a/blocks/card/__mane-card/card__mane-card.css
+++ b/blocks/card/__mane-card/card__mane-card.css
@@ -4,7 +4,7 @@
   font-size: 24px;
   line-height: 29px;
   color: #000;
-  margin: 0 0 0 21px;
+  margin: 25px 0px 25px 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
