--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -7,7 +7,10 @@
   box-shadow: none;
   border: none;
   transition: 0.3s;
-  margin: 0 -21px 0 0;
+  margin: 0;
+  position: absolute;
+  top: -40px;
+  right: -40px;
 }
 
 .popup__close:hover {
@@ -17,8 +20,9 @@
 
 @media screen and (max-width: 720px) {
   .popup__close {
-    margin-right: 19px;
     width: 20px;
     height: 20px;
+    top: -36px;
+    right: 0;
   }
 }
