--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,14 @@
 .popup__container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  width: 430px;
+  background: #fff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+
+  position: relative;
+}
+
+@media screen and (max-width: 720px) {
+  .popup__container {
+    width: 282px;
+  }
 }
