--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,10 +6,8 @@
   background: center no-repeat url(../../../images/add-button.svg);
   border-radius: 2px;
   background-size: 22px;
-  margin: 0;
+  margin: 0 0 0 auto;
   padding: 0;
-  position: absolute;
-  right: 19px;
   transition: 0.3s;
 }
 
@@ -21,7 +19,6 @@
 @media screen and (max-width: 720px) {
   .profile__add-button {
     width: 282px;
-    position: sticky;
     margin-left: auto;
     margin-right: auto;
     background-size: 16px;
