--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,13 +1,5 @@
 .popup__container {
-  width: 430px;
-  background: #fff;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
   position: relative;
-}
-
-@media screen and (max-width: 720px) {
-  .popup__container {
-    width: 282px;
-  }
+  display: flex;
+  flex-direction: column;
 }
