--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__submit {
+.popup__button {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -7,19 +7,19 @@
   color: #fff;
   background: #000;
   border-radius: 2px;
+  border: 1px solid #000000;
   margin: 33px 0 0;
   height: 50px;
-  border: none;
   transition: 0.3s;
 }
 
-.popup__submit:hover {
+.popup__button:hover {
   opacity: 0.8;
   cursor: pointer;
 }
 
 @media screen and (max-width: 720px) {
-  .popup__submit {
+  .popup__button {
     height: 46px;
     margin-top: 30px;
     font-size: 14px;
