--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,6 +1,6 @@
 .popup__error {
   padding: 0;
-  margin: -15px 0 -15px;
+  margin: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
