--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,7 +8,7 @@
   border-left: none;
   border-right: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  margin: 15px 0;
+  margin: 0;
   padding: 0 0 9px;
   text-align: start;
 }
