--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -5,13 +5,12 @@
   line-height: 29px;
   color: #000;
   padding: 0;
-  margin: 0 0 48px;
+  margin: 0;
 }
 
 @media screen and (max-width: 720px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin-bottom: 75px;
   }
 }
