--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,16 @@
 .profile__avatar {
-  max-width: 120px;
-  max-height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   background: #c4c4c4;
-  object-fit: cover;
+  background-size: cover;
   margin: 0;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 720px) {
