--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -16,6 +16,8 @@
 /* Profile */
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-image/profile__avatar-image.css);
+@import url(../blocks/profile/__avatar-edit-buttom/profile__avatar-edit-buttom.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__name/profile__name.css);
@@ -27,9 +29,12 @@
 /* Card */
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__trash/card__trash.css);
+@import url(../blocks/card/__trash/_active/card__trash_active.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__caption/card__caption.css);
 @import url(../blocks/card/__mane-card/card__mane-card.css);
+@import url(../blocks/card/__like/card__like.css);
+@import url(../blocks/card/__like-quantity/care__like-quantity.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
 @import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 
@@ -39,6 +44,8 @@
 
 /* Popup */
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__spinner/popup__spinner.css);
+@import url(../blocks/popup/__spinner/_visible/popup__spinner_visible.css);
 @import url(../blocks/popup/_profile-form/popup_profile-form.css);
 @import url(../blocks/popup/_card-form/popup_card-form.css);
 @import url(../blocks/popup/_card-image/popup_card-image.css);
@@ -47,6 +54,8 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title/_margin-bottom/popup__title_margin-bottom_m.css);
+@import url(../blocks/popup/__title/_margin-bottom/popup__title_margin-bottom_s.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__error/popup__error.css);
